<resources>
    <string name="app_name" translatable="false">CoviTrack</string>
    <string name="home">Home</string>
    <string name="new_cases">Cases</string>
    <string name="search">Search</string>
    <string name="tips">Tips</string>
    <string name="stats">Stats</string>
    <string name="search_view">Search Country</string>
    <string name="error">Something went wrong. Please check your Internet connection and try again later</string>
    <string name="all">Statistics</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="kinyarwanda">Kinyarwanda</string>
    <string name="country">Country</string>
    <string name="total_cases">Total Cases:</string>
    <string name="cases">New Cases:</string>
    <string name="active">Active:</string>
    <string name="recovered">Recovered:</string>
    <string name="deaths">Deaths:</string>
    <string name="name">New Cases</string>
    <string name="countries">Countries</string>
    <string name="total_world_cases">Total cases (World):</string>
    <string name="total_world_active">Active cases (World):</string>
    <string name="total_world_recovered">Total recovered (World):</string>
    <string name="total_world_deaths">Total deaths (World):</string>
    <string name="tip1">1. Wash your hands frequently using soap and water. If soap is not available, alcohol based hand gel or cold ashes may be used to wash away germs.</string>
    <string name="tip2">2. When coughing or sneezing, cover your mouth or nose with a tissue or your bent elbow. Try not to sneeze and cough into your hands because then you will spread the virus with your hands. Throw the tissue into a bin. If you cough/sneeze into your hand, don\'t touch anything and immediately wash your hands with soap and water.</string>
    <string name="tip3">3. Avoid close contact with anyone who is coughing, sneezing, or is sick. Keep at least 1 (3 feet) distance and encourage them to go to a nearby health care center.</string>
    <string name="tip4">4. Avoid touching eyes, nose and mouth. Hands touch many surfaces which can be contaminated with the virus. If you touch your eyes, nose or mouth with your contaminated hands, you can transfer the virus from the surface to yourself.</string>
    <string name="tip5">5. Go to the doctor if you have a fever, cough or feel that it is difficult to breath. This is the best way to look after yourself and stop the infection spreading to your family and others. Make sure to first call the toll-free number 114 and let them know your symptoms so you don\'t infect other people.</string>
    <string name="tip6">6. Stay home when you are sick.</string>
    <string name="tip7">7. Clean and disinfect frequently touched objects and surfaces with chlorine- or alcohol-containing cleaning solutions. It is not yet known if and how long the virus lasts on surfaces, but a disinfectant with 70% alcohol can kill it.</string>
</resources>
