<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_new_cases"
        android:icon="@drawable/ic_trending_up_white_24dp"
        android:title="@string/new_cases" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_tips"
        android:icon="@drawable/ic_lightbulb_outline_white_24dp"
        android:title="@string/tips" />

    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_equalizer_white_24dp"
        android:title="@string/stats" />

</menu>